<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ship_in"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_ship_in" />
        <item
            android:id="@+id/nav_ship_out"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_ship_out" />
        <item
            android:id="@+id/nav_coil_stock"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_coil_stock" />
        <item
            android:id="@+id/nav_pos_change"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/menu_change_pos" />
    </group>
</menu>