<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/main_color_button"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/messageTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/message_login_failed" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="0dp"
        style="@style/DialogTextViewStyle"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        tools:text="@string/invalid_login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/positiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#00FF0000"
        android:text="@string/dialog_ok"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/messageTextView"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/negativeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FF0000"
        android:text="@string/dialog_ng"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/positiveButton"
        app:layout_constraintRight_toLeftOf="@id/positiveButton" />
</androidx.constraintlayout.widget.ConstraintLayout>