<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.micromos.knpmobile.ui.productcoilout.ProductCoilOutViewModel" />


        <variable
            name="shipOutItem"
            type="com.micromos.knpmobile.dto.ShipOrder" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@{viewModel.setCardViewColor(shipOutItem.pdaDateTimeOut)}"
        android:onClick="@{() -> viewModel.test(shipOutItem.labelNo)}"
        app:cardCornerRadius="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">


            <TextView
                android:id="@+id/label_no_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/label_no(shipOutItem.labelNo)}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="라벨번호 % s" />

            <TextView
                android:id="@+id/label_ok_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="@color/red"
                android:visibility="@{viewModel.setOkTvVisibility(shipOutItem.pdaDateTimeOut)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/label_no_tv" />

            <TextView
                android:id="@+id/product_no_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{@string/product_no(shipOutItem.coilNo, shipOutItem.coilSeq)}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_no_tv"
                tools:text="제품번호" />

            <TextView
                android:id="@+id/name_nm_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{@string/name_cd(shipOutItem.nameNm)}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_no_tv"
                tools:text="@string/name_cd" />

            <TextView
                android:id="@+id/size_cd_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{@string/size_cd(shipOutItem.sizeNo)}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_nm_tv"
                tools:text="@string/size_cd" />

            <TextView
                android:id="@+id/stan_nm_cd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/stan_cd(shipOutItem.stanNm)}"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/name_nm_tv"
                tools:text="@string/stan_cd" />

            <TextView
                android:id="@+id/quantity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:text="@{@string/quantity(shipOutItem.quantity)}"
                app:layout_constraintRight_toLeftOf="@id/weight_tv"
                app:layout_constraintTop_toBottomOf="@id/stan_nm_cd"
                tools:text="@string/quantity" />

            <TextView
                android:id="@+id/weight_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{@string/weight(shipOutItem.weight)}"
                app:layout_constraintRight_toRightOf="@id/stan_nm_cd"
                app:layout_constraintTop_toBottomOf="@id/stan_nm_cd"
                tools:text="@string/weight" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>