<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        tools:text="@string/message_login_failed"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@color/main_color"
        app:layout_constraintBottom_toTopOf="@id/messageTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:textSize="18sp"
        tools:text="@string/invalid_login"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/positiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FF0000"
        android:text="@string/dialog_ok"
        android:textColor="@color/main_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>