<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.micromos.knpmobile.ui.scanproductcoilin.ScanProductCoilInViewModel" />

        <variable
            name="shipInItem"
            type="com.micromos.knpmobile.dto.ShipOrder" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:onClick="@{() -> viewModel.cardClick(shipInItem.labelNo)}"
        app:cardBackgroundColor="@{viewModel.setCardViewColor(shipInItem.pdaDateTimeIn)}"
        app:cardCornerRadius="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        tools:cardBackgroundColor="@color/card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_no_tv"
                style="@style/cardViewListStyleNoMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/label_no(shipInItem.labelNo)}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="라벨번호 % s" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pos_cd_tv"
                style="@style/cardViewListStyleNoMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{shipInItem.posNm}"
                app:layout_constraintLeft_toRightOf="@id/label_no_tv"
                android:layout_marginLeft="20dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="위치 % s" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_ok_tv"
                style="@style/cardViewListStyleNoMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="@color/fontRed"
                android:visibility="@{viewModel.setOkTvVisibility(shipInItem.pdaDateTimeIn)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/label_no_tv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_no_tv"
                style="@style/cardViewListStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/product_no(shipInItem.coilNo, shipInItem.coilSeq)}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_no_tv"
                tools:text="제품번호" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_nm_tv"
                style="@style/cardViewListStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/name_cd(shipInItem.nameNm)}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/product_no_tv"
                tools:text="@string/name_cd" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/size_cd_tv"
                style="@style/cardViewListStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/size_cd(shipInItem.sizeNo)}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_nm_tv"
                tools:text="@string/size_cd" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stan_nm_cd"
                style="@style/cardViewListStyleNoMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/stan_cd(shipInItem.stanNm)}"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/name_nm_tv"
                tools:text="@string/stan_cd" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/quantity_tv"
                style="@style/cardViewListStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@{@string/quantity(shipInItem.quantity)}"
                app:layout_constraintRight_toLeftOf="@id/weight_tv"
                app:layout_constraintTop_toBottomOf="@id/stan_nm_cd"
                tools:text="@string/quantity" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weight_tv"
                style="@style/cardViewListStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/weight(shipInItem.weight)}"
                app:layout_constraintRight_toRightOf="@id/stan_nm_cd"
                app:layout_constraintTop_toBottomOf="@id/stan_nm_cd"
                tools:text="@string/weight" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>