<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.micromos.ddsteelmobile.ui.productmaterialIn.ProductMaterialInViewModel" />

        <variable
            name="materialInItem"
            type="com.micromos.ddsteelmobile.dto.GetMaterialCardInfo" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:cardBackgroundColor="@color/card"
        app:cardCornerRadius="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mill_no_tv"
                style="@style/cardViewListStyleNoMarginMaterialIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/mill_no(materialInItem.millNo)}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Mill No. %s" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_ok_tv"
                style="@style/cardViewListStyleNoMarginMaterialIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textColor="@color/fontRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/mill_no_tv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_cd_tv"
                style="@style/cardViewListStyleMaterialIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/name_cd_material_in(materialInItem.nameNm)}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mill_no_tv"
                tools:text="@string/name_cd_material_in" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stan_cd_tv"
                style="@style/cardViewListStyleMaterialIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/stan_cd(materialInItem.stanNm)}"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_ok_tv"
                tools:text="@string/stan_cd" />


            <TextView
                android:id="@+id/size_no_tv"
                style="@style/cardViewListStyleMaterialIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{materialInItem.sizeNo}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_cd_tv"
                tools:text="size No." />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/weight_tv"
                style="@style/cardViewListStyleMaterialIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/weight(materialInItem.weight)}"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stan_cd_tv"
                tools:text="@string/weight" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>